테이블에 _ 자동 입력되는 것 방지, data.sql에 Product 11개 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.initialization-mode=always
 
+#actuator를 사용하기 위해 추가
 management.endpoints.web.exposure.include=*
+
+#대문자 앞에 자동 _ 생성되는 거 방지
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
