--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.initialization-mode=always
 
 #actuator를 사용하기 위해 추가
 management.endpoints.web.exposure.include=*
+#json이 pretty로 나오게 추가
+spring.jackson.serialization.INDENT_OUTPUT=true
 
 #대문자 앞에 자동 _ 생성되는 거 방지
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
